--- a/.gitignore
+++ b/.gitignore
@@ -1,280 +1,66 @@
-{
-    "code": 200,
-    "data": {
-        "customerName": "FRANCO JACK",
-        "customerAddress": "JACK FRANCO 425 EAST 58TH STREET APT # 48 B NEW YORK NY 10022",
-        "customerAccountOfficer": "036 Sigalit Levy-Shabi        BR 4",
-        "cif": "F016583",
-        "branchCity": "New York",
-        "branchState": "NY",
-        "branchType": "Domestic",
-        "packageType": "Individual",
-        "packageName": "Domestic Individual",
-        "fees": [
-            {
-                "feeType": "Customer Fees",
-                "feeGroups": [
-                    {
-                        "name": "Standard Fees",
-                        "code": 1,
-                        "fields": [
-                            {
-                                "code": 1,
-                                "name": "Account Maintenance Fee",
-                                "defaultValue": "25",
-                                "tooltip": "Monthly - Charged Quarterly",
-                                "isException": false,
-                                "exceptionOptions": [],
-                                "labelValue": "$25.00"
-                            },
-                            {
-                                "code": 2,
-                                "name": "Hold Mail Fee",
-                                "defaultValue": "",
-                                "tooltip": "Annual - Charged Annual",
-                                "isException": false,
-                                "exceptionOptions": [],
-                                "labelValue": "$0.00"
-                            }
-                        ],
-                        "kycMailingStatus": "Standard",
-                        "cif": "F016583",
-                        "accountNumber": 7115342
-                    },
-                    {
-                        "name": "Client Current Fees",
-                        "code": 2,
-                        "fields": [
-                            {
-                                "code": 1,
-                                "name": "Account Maintenance Fee",
-                                "defaultValue": "",
-                                "tooltip": "",
-                                "isException": false,
-                                "exceptionOptions": []
-                            },
-                            {
-                                "code": 2,
-                                "name": "Hold Mail Fee",
-                                "defaultValue": "",
-                                "tooltip": "",
-                                "isException": false,
-                                "exceptionOptions": []
-                            }
-                        ],
-                        "cif": "F016583",
-                        "accountNumber": 7115342
-                    },
-                    {
-                        "name": "Exceptions Request",
-                        "code": 3,
-                        "fields": [
-                            {
-                                "code": 1,
-                                "name": "Account Maintenance Fee",
-                                "defaultValue": "0",
-                                "tooltip": "",
-                                "isException": true,
-                                "exceptionOptions": [
-                                    {
-                                        "approvedByDoubleA": null,
-                                        "value": "0",
-                                        "text": "$0.00",
-                                        "visible": true,
-                                        "retired": false,
-                                        "parameterOptionId": 94
-                                    }
-                                ],
-                                "labelValue": ""
-                            },
-                            {
-                                "code": 2,
-                                "name": "",
-                                "defaultValue": "0",
-                                "tooltip": "",
-                                "isException": true,
-                                "exceptionOptions": [],
-                                "labelValue": ""
-                            }
-                        ],
-                        "cif": "F016583",
-                        "accountNumber": 7115342
-                    }
-                ]
-            },
-            {
-                "feeType": "Bank Account Fees",
-                "feeGroups": [
-                    {
-                        "name": "Standard Fees",
-                        "code": 1,
-                        "fields": [
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "25",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33aa"
-                            },
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33ab"
-                            },
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33ac"
-                            },
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "25",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33ad"
-                            }
-                        ],
-                        "cif": "F016583",
-                        "accountNumber": "7113617",
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "_id": "67abbd13a55849d998db33a9"
-                    },
-                    {
-                        "name": "Client Current Fees",
-                        "code": 2,
-                        "fields": [
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33be"
-                            },
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33bf"
-                            },
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33c0"
-                            },
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67abbd13a55849d998db33c1"
-                            }
-                        ],
-                        "cif": "F016583",
-                        "accountNumber": "7113617",
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "_id": "67abbd13a55849d998db33bd"
-                    },
-                    {
-                        "name": "Exceptions Request",
-                        "code": 3,
-                        "fields": [
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": true,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "0",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [
-                                    {
-                                        "value": "0",
-                                        "text": "$0.00",
-                                        "retired": false,
-                                        "visible": true,
-                                        "approvedByDoubleA": null,
-                                        "_id": "67abbd13a55849d998db33d3"
-                                    }
-                                ],
-                                "_id": "67abbd13a55849d998db33d2",
-                                "labelValue": ""
-                            },
-                            {
-                                "code": 8,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": true,
-                                "name": "FX Outgoing Wire (SafraLink) Fee",
-                                "defaultValue": "0",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [
-                                    {
-                                        "value": "0",
-                                        "text": "$0.00",
-                                        "retired": false,
-                                        "visible": true,
-                                        "approvedByDoubleA": null,
-                                        "_id": "67abbd13a55849d998db33d5"
-                                    }
-                                ],
-                                "_id": "67abbd13a55849d998db33d4",
-                                "labelValue": ""
-                            }
-                        ],
-                        "cif": "F016583",
-                        "accountNumber": "7113617",
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "_id": "67abbd13a55849d998db33d1"
-                    },
+for (const code of allCodes) {
+  let field = exceptionGroup.fields.find((f) => f.code === code);
+  if (!field) {
+    // Busca o grupo "Standard Fees" para o mesmo FeeType
+    const standardGroup = groupedFeesMap[ft]?.feeGroups.find((g) => g.name === 'Standard Fees');
+    // Procura o field com o mesmo código no Standard Fees
+    const stdField = standardGroup?.fields.find((f) => f.code === code);
+    field = {
+      code,
+      name: stdField?.name || '',  // se existir, usa o nome do Standard Fees
+      defaultValue: '0',
+      tooltip: '',
+      isException: true,
+      exceptionOptions: []
+    };
+    exceptionGroup.fields.push(field);
+  }
+}
+
+
+
+const codeMap = exceptionsByFeeTypeAndCode[ft] || {};
+for (const [codeStr, listExc] of Object.entries(codeMap)) {
+  const code = Number(codeStr);
+  let field = exceptionGroup.fields.find((f) => f.code === code);
+  if (!field) {
+    // Se não existir, crie o field (já estamos tratando isso no loop acima)
+    const standardGroup = groupedFeesMap[ft]?.feeGroups.find((g) => g.name === 'Standard Fees');
+    const stdField = standardGroup?.fields.find((f) => f.code === code);
+    field = {
+      code,
+      name: stdField?.name || '', 
+      defaultValue: listExc[0].defaultValue || '0',
+      tooltip: listExc[0].tooltip || '',
+      isException: true,
+      exceptionOptions: []
+    };
+    exceptionGroup.fields.push(field);
+  } else {
+    // Se o field já existe mas o name está vazio, atualize-o
+    if (!field.name || field.name.trim() === '') {
+      const standardGroup = groupedFeesMap[ft]?.feeGroups.find((g) => g.name === 'Standard Fees');
+      const stdField = standardGroup?.fields.find((f) => f.code === code);
+      field.name = stdField?.name || listExc[0].name || '';
+    }
+  }
+  for (const exc of listExc) {
+    const amountNumber = parseFloat(exc.defaultValue || '0');
+    field.exceptionOptions.push({
+      approvedByDoubleA: null,
+      value: exc.defaultValue,
+      text: `$${amountNumber.toFixed(2)}`,
+      visible: true,
+      retired: false,
+      parameterOptionId: exc.parameterOptionId,
+    });
+  }
+}
+
+
+
+
+
+const standardGroup = groupedFeesMap[ft]?.feeGroups.find((g) => g.name === 'Standard Fees');
+const stdField = standardGroup?.fields.find((f) => f.code === code);
+name: stdField?.name || '',
